--- a/public/html/Index.html
+++ b/public/html/Index.html
@@ -10,12 +10,12 @@
 <body>
     <h1>Log In</h1>
 
-    <form method="post" id="form1">
+    <form method="POST" id="form1">
         <label for="email">Email:</label>
         <input type="text" id="email" name="email"><br><br>
         <label for="password">Password:</label>
         <input type="password" id="password" name="password">
-        <button type="submit" form="form1" value="Submit">Submit</button>
+        <button type="submit" form="form1" value="Submit" >Submit</button>
     </form>
 
     <script src="/js/login.js"></script>
