--- a/public/html/Index.html
+++ b/public/html/Index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Log In</h1>
 
-    <form method="POST" id="form1">
+    <form method="POST" id="form1" action="/login">
         <label for="email">Email:</label>
         <input type="text" id="email" name="email"><br><br>
         <label for="password">Password:</label>
@@ -18,7 +18,7 @@
         <button type="submit" form="form1" value="Submit" >Submit</button>
     </form>
 
-    <script src="/js/login.js"></script>
+    
 </body>
 
 </html>
